--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
                     </li>
                     <li>
                         <i class="fa-solid fa-clock"></i>
-                        <p>Monday to Saturday 9 a.m. to 16</p>
+                        <p>Monday to Saturday 9 a.m. to 5 p.m. </p>
                     </li>
                 </div>
             </div>
