--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
 </head> 
 <body>
         <section id="header">
-            <a href="#"> <img src="D:\SGP\img\logo\logo1.jpg" class="logo1" alt=""> </a>
+            <a href="#"> <img src="img\logo\logo1.jpg" class="logo1" alt=""> </a>
             <div>
                 <ul id="navbar">    
                     <li><a  href="index.html">Home</a></li>
