--- a/shop.html
+++ b/shop.html
@@ -371,7 +371,7 @@
                 <img src="img\payment.png" alt="">
              </div>
              <div class="copyright">
-                <p>@ 2023, SGP etc - HTML CSS E-Commerce Tempelate</p>
+                <p>@2023, SGP SneakNStreet </p>
              </div>
         </footer>
 
