--- a/about.html
+++ b/about.html
@@ -139,7 +139,7 @@
                 <img src="D:\SGP\img\payment.png" alt="">
              </div>
              <div class="copyright">
-                <p>@ 2023, SGP etc - HTML CSS E-Commerce Tempelate</p>
+                <p>@2023, SGP SneakNStreet </p>
              </div>
         </footer>
 
