--- a/contact.html
+++ b/contact.html
@@ -114,27 +114,23 @@
                     </div>
                 </div>
              </div>
-             <div class="col">
-                <h4>About</h4>
-                <a href="#">About Us</a>
-                <a href="#">Dilivery Information</a>
-                <a href="#">Privacy Policy</a>
-                <a href="#">Terms and Conditions</a>
-                <a href="#">Contact Us</a>
-             </div>
-             <div class="col">
-                <h4>My Account</h4>
-                <a href="#">Sign In</a>
-                <a href="#">View cart</a>
-                <a href="#">My Wishlist</a>
-                <a href="#">Track My Order</a>
-                <a href="#">Help</a>
-             </div>
-             <div class="col install">
-                <h4>Install Apps</h4>
-                <p>Secured Payement Gateways</p>
-                <img src="img\payment.png" alt="">
-             </div>
+            <div class="col">
+                    <h4>About</h4>
+                    <a href="#">About Us</a><br>
+                    <a href="#">Dilivery Information</a><br>
+                    <a href="#">Privacy Policy</a><br>
+                    <a href="#">Terms and Conditions</a><br>
+                    <a href="#">Contact Us</a><br>
+                 </div>
+                 <div class="col">
+                    <h4>My Account</h4>
+                    <a href="#">Sign In</a><br>
+                    <a href="#">View cart</a><br>
+                    <a href="#">My Wishlist</a><br>
+                    <a href="#">Track My Order</a><br>
+                    <a href="#">Help</a><br>
+                 </div>
+             
              <div class="copyright">
                <p>@2023, SGP SneakNStreet </p>
              </div>
