--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,7 @@
                     </li>
                     <li>
                         <i class="fa-solid fa-envelope"></i>
-                        <p>contactusat456@gmail.com.com</p>
+                        <p>contactusat456@gmail.com</p>
                     </li>
                     <li>
                         <i class="fa-solid fa-clock"></i>
