--- a/payment.html
+++ b/payment.html
@@ -72,7 +72,7 @@
 					</label>
 				</div>
 			</form>
-			<input type="submit" name="" value="Proceed to Checkout">
+			<input type="submit" name="" value="Proceed to Checkout" onclick="window.location.href = 'index.html';">
 		</div>
 	</div>
 </header>
