--- a/payment.html
+++ b/payment.html
@@ -29,7 +29,7 @@
 						<select>
 							<option>Choose State..</option>
 							<option>Gujarat</option>
-							<option>Hariyana</option>
+							<option>Haryana</option>
 							<option>Uttar Pradesh</option>
 							<option>Madhya Pradesh</option>
 						</select>
