--- a/cart.html
+++ b/cart.html
@@ -31,8 +31,8 @@
         </section>  
 
         <section id="page-header" class="about-header">
-            <h2>#let's_talk</h2>
-            <p>LEAVE A MESSAGE, We love to hear from you!</p>
+            <h2>Your Cart</h2>
+            <p>Almost there , Check your selected items !!!!</p>
         </section>
 
         <section id="cart" class="section-p1">
