--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
                     Our mission is to provide our customers with high-quality, unique and stylish modern streetwear at an affordable price,
                     especially during these times of high inflation.</h4><br>
 
-                    <h4> SneakNStreet was founded in January 2023 in Gujarat, India by Japan Kachhiya  , Shivaansh Dave , Probin Bhagchandani. 
+                    <h4> SneakNStreet was founded in January 2023 in Gujarat, India by Japan,Shivaansh and Probin. 
                         As entrepreneurs at heart, they combined their interests in photography, art, music, and modern clothing to create something
                          truly special.We have searched the world to bring you the best of the best in modern streetwear, 
                          carefully selecting pieces from all your favorite brands.</h4><br>
